# Flet_Tetris

./: .gitignore  LICENSE  README.md  animate_lines.py  background.py  buttons_layout.py  data_rw.py  game_state.json  highscore.json  initialization.py  main.py  main_screen.py  options.py  pyproject.toml  requirements.txt  settings.py  styles.py  tetris.py  tetris_tests.py  tetrominoes.py  utils.py
ver1/: initialization.py  main.py  settings.py  tetrominoes.py  utils.py
