[project]
name = "Flet-Tetris"
version = "1.0.3"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Serge Vasilyev", email = "sergey.vasilyev.dev@gmail.com" }
]
dependencies = [
  "flet==0.28.3"
]

[project.optional-dependencies]
desktop = [
    "pynput>=1.8.1",
]

[tool.flet]
org = "com.sergevasilyev"
product = "Flet-Tetris"
company = "Sergey Vasilyev"
copyright = "Copyright (C) 2025 by Sergey Vasilyev"

[tool.flet.app]
path = ""